# opraas

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  anvil.dockerfile  config.example.toml  config.toml  cross.dockerfile  hostpath.yaml  package-lock.json  package.json  rustfmt.toml
.github/: pull_request_template.md
opraas_cli/: Cargo.toml
opraas_cli/src/: config.rs  main.rs
opraas_cli/src/commands/: build.rs  deploy.rs  dev.rs  init.rs  inspect.rs  mod.rs  monitor.rs  new.rs  release.rs  setup.rs  version.rs
opraas_cli/src/config/: config.rs  global.rs  mod.rs  requirements.rs
opraas_cli/src/console/: dialoguer.rs  logging.rs  mod.rs  progress.rs  terminal.rs
opraas_cli/src/infra/: mod.rs
opraas_cli/src/infra/console/: dialoguer.rs  mod.rs  terminal.rs
opraas_cli/src/infra/version_control/: git.rs  mod.rs  version_control.rs
opraas_cli/src/testnet/: anvil_node.rs  mod.rs  node.rs
opraas_cli/src/utils/: artifacts_factory.rs  git.rs  mod.rs  system.rs
opraas_cli/tests/: help.rs  new.rs  version.rs
opraas_core/: Cargo.toml
opraas_core/src/: lib.rs
opraas_core/src/application/: mod.rs
opraas_core/src/application/artifact/: build.rs  build_artifact.rs  initialize.rs  initialize_artifact.rs  mod.rs  release.rs
opraas_core/src/application/commands/: new.rs
opraas_core/src/application/contracts/: deploy.rs  mod.rs
opraas_core/src/application/project/: create.rs  create_project.rs  mod.rs
opraas_core/src/application/services/: project.rs
opraas_core/src/application/stack/: deploy.rs  mod.rs  run.rs
opraas_core/src/artifacts/: initializable.rs  mod.rs
opraas_core/src/artifacts/cloud/: artifact.rs  contracts.rs  infra.rs  mod.rs
opraas_core/src/config/: accounts.rs  artifacts.rs  config.rs  contracts.rs  core.rs  deploy.rs  mod.rs  network.rs  requirements.rs  sources.rs  tree.rs
opraas_core/src/domain/: artifact.rs  deployment.rs  mod.rs  project.rs  release.rs  stack.rs
opraas_core/src/infra/: mod.rs
opraas_core/src/infra/artifact/: mod.rs  repo_source_git.rs
opraas_core/src/infra/artifact_builder/: artifact_builder.rs  docker.rs  mod.rs
opraas_core/src/infra/deployment/: mod.rs
opraas_core/src/infra/eth_rpc/: json.rs  mod.rs
opraas_core/src/infra/ethereum/: mod.rs  node.rs  node_geth.rs  rpc.rs
opraas_core/src/infra/project/: mod.rs  repo_inmemory.rs  version_control_git.rs
opraas_core/src/infra/release/: mod.rs  runner_docker.rs
opraas_core/src/infra/release_runner/: artifact_runner.rs  docker.rs  mod.rs  release_runner.rs
opraas_core/src/infra/repositories/: mod.rs
opraas_core/src/infra/repositories/artifact/: docker.rs
opraas_core/src/infra/repositories/artifact_release/: docker.rs
opraas_core/src/infra/stack/: deployer_terraform.rs  mod.rs  repo_inmemory.rs  runner_helm.rs
opraas_core/src/infra/stack_deployer/: mod.rs  stack_deployer.rs  terraform.rs
opraas_core/src/infra/stack_runner/: helm.rs  mod.rs  stack_runner.rs
opraas_core/src/infra/testnet_node/: anvil.rs  docker.rs  geth.rs  mod.rs  testnet_node.rs
opraas_core/src/infra/version_control/: git.rs  mod.rs  version_control.rs
opraas_core/src/opstack/: batcher.rs  contracts.rs  geth.rs  mod.rs  network.rs  node.rs  proposer.rs  source.rs
opraas_core/src/utils/: docker.rs  filesystem.rs  git.rs  mod.rs  progress.rs  system.rs  yaml.rs
opraas_server/: Cargo.toml  README.md
opraas_server/src/: main.rs
opraas_server/src/handlers/: build_handler.rs  form_handler.rs  health_handler.rs  hello_handler.rs  inspect_handler.rs  mod.rs
opraas_server/src/models/: build_data.rs  form_data.rs  mod.rs
opraas_server/src/routes/: configure.rs  mod.rs
opraas_server/src/utils/: zip.rs
(+132 files in other folders)
