[package]
name = "opraas_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
opraas_core = { path = "../opraas_core" }
serde_json = "1.0.129"
colored = "2.1.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
indicatif = "0.17.8"
