[package]
name = "opraas_core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["blocking"] }
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
sha3 = "0.10.8"
uuid = { version = "1.11.0", features = ["v4"] }
web3 = "0.19.0"
zip = "2.2.0"
zip-extract = "0.2.1"
