[package]
name = "opraas_core"
version = "0.0.5"
edition = "2021"

[dependencies]
log = "0.4.22"
toml = "0.8.19"
pretty_env_logger = "0.5.0"
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
sha3 = "0.10.8"
uuid = { version = "1.11.0", features = ["v4"] }
async-trait = "0.1.83"
reqwest = { version = "0.10.8", features = ["blocking"] }
zip-extract = "0.2.1"
mockall = "0.13.0"
tempfile = "3.14.0"
rand = "0.8.5"
serde_yaml = "0.9.34"
regex = "1.11.1"
colored = "2.1.0"
git2 = "0.19.0"
zip = "0.6"
openssl = { version = "0.10.35", features = ["vendored"] }

