[package]
name = "opraas_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
log = "0.4"
tracing = "0.1.37" 
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]} 
tower-http = { version = "0.6.2", features = ["trace"] }
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"


